--- a/templates/cart.html
+++ b/templates/cart.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Shopping Cart - Abaya Store{% endblock %}
+{% block title %}Shopping Cart - Abaya Store!{% endblock %}
 {% block head %}
 <style>
     .cart-container {
