--- a/templates/contact.html
+++ b/templates/contact.html
@@ -9,7 +9,7 @@
 <section class="contact-hero">
     <div class="container">
         <div class="hero-content">
-            <h1>Get In Touch</h1>
+            <h1>Get In Touch!</h1>
             <p>We'd love to hear from you. Send us a message and we'll respond as soon as possible.</p>
         </div>
     </div>
